--- a/products.html
+++ b/products.html
@@ -1,15 +1,47 @@
 <!DOCTYPE html>
 <html>
 <head>
-<<<<<<< HEAD
-    <title></title
+    <title></title>
+    <meta charset='utf-8'>
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
 </head>
 <body>
-=======
-	<title></title>
-</head>
-<body>
+	<div class="wrapper">
+		
+		<div>
+		    <img src="http://demo.opencart.com/image/cache/catalog/demo/palm_treo_pro_1-228x228.jpg" alt="Alt">
+		</div>
+		<div>
+		    <img src="http://demo.opencart.com/image/cache/catalog/demo/iphone_1-228x228.jpg" alt="Alt">
+		</div>
+		<div>
+		    <img src="http://demo.opencart.com/image/cache/catalog/demo/htc_touch_hd_1-228x228.jpg" alt="Alt">
+		</div>
+		<div>
+		    <img src="http://demo.opencart.com/image/cache/catalog/demo/samsung_syncmaster_941bw-228x228.jpg" alt="Alt">
+		</div>
+		<div>
+		    <img src="http://demo.opencart.com/image/cache/catalog/demo/samsung_tab_1-228x228.jpg" alt="Alt">
+		</div>
+		<div>
+		    <img src="http://demo.opencart.com/image/cache/catalog/demo/imac_1-228x228.jpg" alt="Alt">
+		</div>
+		<div>
+		    <img src="http://demo.opencart.com/image/cache/catalog/demo/canon_eos_5d_1-228x228.jpg" alt="Alt">
+		</div>
+		<div>
+		    <img src="http://demo.opencart.com/image/cache/catalog/demo/ipod_classic_1-228x228.jpg" alt="Alt">
+		</div>
+		<div>
+		    <img src="http://demo.opencart.com/image/cache/catalog/demo/nikon_d300_1-228x228.jpg" alt="Alt">
+		</div>
 
->>>>>>> b52541e4979359777d0851163defdbb270d32b7f
+		<div class="buffer"></div>
+	</div>
+
+	<footer>
+	    &copy; LevelUP
+	</footer>
 </body>
 </html>
