--- a/products.html
+++ b/products.html
@@ -5,38 +5,39 @@
     <meta charset='utf-8'>
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/grid.css">
 </head>
 <body>
 	<div class="wrapper">
-		
-		<div>
+		<div class="container clearfix">
+		<div class="grid4 first">
 		    <img src="http://demo.opencart.com/image/cache/catalog/demo/palm_treo_pro_1-228x228.jpg" alt="Alt">
 		</div>
-		<div>
+		<div class="grid4">
 		    <img src="http://demo.opencart.com/image/cache/catalog/demo/iphone_1-228x228.jpg" alt="Alt">
 		</div>
-		<div>
+		<div class="grid4">
 		    <img src="http://demo.opencart.com/image/cache/catalog/demo/htc_touch_hd_1-228x228.jpg" alt="Alt">
 		</div>
-		<div>
+		<div class="grid4 first">
 		    <img src="http://demo.opencart.com/image/cache/catalog/demo/samsung_syncmaster_941bw-228x228.jpg" alt="Alt">
 		</div>
-		<div>
+		<div class="grid4">
 		    <img src="http://demo.opencart.com/image/cache/catalog/demo/samsung_tab_1-228x228.jpg" alt="Alt">
 		</div>
-		<div>
+		<div class="grid4">
 		    <img src="http://demo.opencart.com/image/cache/catalog/demo/imac_1-228x228.jpg" alt="Alt">
 		</div>
-		<div>
+		<div class="grid4 first">
 		    <img src="http://demo.opencart.com/image/cache/catalog/demo/canon_eos_5d_1-228x228.jpg" alt="Alt">
 		</div>
-		<div>
+		<div class="grid4">
 		    <img src="http://demo.opencart.com/image/cache/catalog/demo/ipod_classic_1-228x228.jpg" alt="Alt">
 		</div>
-		<div>
+		<div class="grid4">
 		    <img src="http://demo.opencart.com/image/cache/catalog/demo/nikon_d300_1-228x228.jpg" alt="Alt">
 		</div>
-
+		</div>
 		<div class="buffer"></div>
 	</div>
 
